--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -34,7 +34,9 @@ jobs:
       with:
         languages: ${{ matrix.language }}
     - name: Build
-      run: make rel-ci
+      run: |
+        dotnet nuget add source --username AptiviCEO --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Aptivi/index.json"
+        make rel-ci
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
       with:
