--- a/.github/workflows/build-ppa-package.yml
+++ b/.github/workflows/build-ppa-package.yml
@@ -26,6 +26,9 @@ jobs:
           sudo rm /etc/apt/sources.list.d/microsoft-prod.list
           sudo NEEDRESTART_SUSPEND=1 apt install devscripts debhelper-compat dput build-essential equivs
           sudo NEEDRESTART_SUSPEND=1 mk-build-deps -i
+
+      - name: Add GitHub Package Registry to get access to beta builds
+        run: dotnet nuget add source --username AptiviCEO --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Aptivi/index.json"
         
       - name: Initialize offline package
         run: |
