--- a/.github/workflows/pushppa.yml
+++ b/.github/workflows/pushppa.yml
@@ -55,6 +55,7 @@ jobs:
         
       - name: Initialize offline package
         run: |
+          dotnet nuget add source --username AptiviCEO --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Aptivi/index.json"
           make init-offline
           make clean
         
