--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,8 @@ jobs:
           dotnet-version: '8.0.x'
       - name: Setup DocFX
         run: dotnet tool install --global docfx
+      - name: Add GitHub Package Registry to get access to beta builds
+        run: dotnet nuget add source --username AptiviCEO --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Aptivi/index.json"
       - name: Release Asset Preparation
         run: |
           cmd.exe /c "tools\build.cmd Release -p:ContinuousIntegrationBuild=true"
