--- a/public/Nitrocid.Addons/Nitrocid.Extras.Images.Icons/Nitrocid.Extras.Images.Icons.csproj
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Images.Icons/Nitrocid.Extras.Images.Icons.csproj
@@ -35,7 +35,7 @@
   <!-- Extras.Images.Icons addon Platform Information End -->
 
   <ItemGroup>
-    <PackageReference Include="Terminaux.Images.Icons" Version="6.1.8.2" />
+    <PackageReference Include="Terminaux.Images.Icons" Version="7.0.0-beta1-20250418190313" />
   </ItemGroup>
 
 </Project>
