ref - Merged Timers and TimeInfo to Dates
---

This is important to add date-related functions to this addon.

---

Type: ref
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/private/Nitrocid.Generators/Nitrocid.Generators.KnownAddons/Resources/KnownAddons.json
+++ b/private/Nitrocid.Generators/Nitrocid.Generators.KnownAddons/Resources/KnownAddons.json
@@ -160,14 +160,9 @@
         "project": "Extras.ThemeStudio"
     },
     {
-        "name": "ExtrasTimeInfo",
-        "display": "Extras - Time Info",
-        "project": "Extras.TimeInfo"
-    },
-    {
-        "name": "ExtrasTimers",
-        "display": "Extras - Timers",
-        "project": "Extras.Timers"
+        "name": "ExtrasDates",
+        "display": "Extras - Dates",
+        "project": "Extras.Dates"
     },
     {
         "name": "ExtrasTips",
