--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -26,8 +26,6 @@ jobs:
       uses: docker/metadata-action@master
       with:
         images: eofla/nitrocid
-    - name: Add GitHub Package Registry to get access to beta builds
-      run: dotnet nuget add source --username AptiviCEO --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Aptivi/index.json"
     - name: Build Docker image
       uses: docker/build-push-action@master
       with:
@@ -35,4 +33,6 @@ jobs:
         provenance: mode=max
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
+        secrets: |
+          "github_token=${{ secrets.GITHUB_TOKEN }}"
         
