--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -34,5 +34,5 @@ jobs:
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         secrets: |
-          "github_token=${{ secrets.GITHUB_TOKEN }}"
+          github_token=${{ secrets.GITHUB_TOKEN }}
         
