--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -17,6 +17,8 @@ jobs:
       actions: read
       contents: read
       security-events: write
+      id-token: write
+      packages: write
     strategy:
       fail-fast: false
       matrix:
