--- a/.github/workflows/release-canary.yml
+++ b/.github/workflows/release-canary.yml
@@ -26,6 +26,8 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.0.x'
+      - name: Add GitHub Package Registry to get access to beta builds
+        run: dotnet nuget add source --username AptiviCEO --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Aptivi/index.json"
       - name: Release Asset Preparation
         run: |
           cmd.exe /c "tools\build.cmd Debug -p:ContinuousIntegrationBuild=true"
@@ -50,6 +52,4 @@ jobs:
           name: nks-analyzer
           path: "public/Nitrocid/KSAnalyzer"
       - name: Package Publication
-        run: |
-          dotnet nuget add source --username AptiviCEO --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Aptivi/index.json"
-          cmd.exe /C "tools\push.cmd ${{ secrets.GITHUB_TOKEN }} github"
+        run: cmd.exe /C "tools\push.cmd ${{ secrets.GITHUB_TOKEN }} github"
