--- a/public/Nitrocid.Addons/Directory.Build.props
+++ b/public/Nitrocid.Addons/Directory.Build.props
@@ -6,8 +6,9 @@
         <PlatformTarget>AnyCPU</PlatformTarget>
         <DebugSymbols>true</DebugSymbols>
         <DefineTrace>true</DefineTrace>
+        <TargetFramework>net8.0</TargetFramework>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-        <OutputPath>..\Nitrocid\KSBuild\$(TargetFramework)\Addons\$(MSBuildProjectName.Replace('Nitrocid.', ''))</OutputPath>
+        <OutputPath>..\..\Nitrocid\KSBuild\$(TargetFramework)\Addons\$(MSBuildProjectName.Replace('Nitrocid.', ''))</OutputPath>
         <GenerateDocumentationFile>True</GenerateDocumentationFile>
     </PropertyGroup>
     <!-- ThemePacks addon General Information End -->
@@ -21,8 +22,8 @@
         <Optimize>true</Optimize>
     </PropertyGroup>
     <ItemGroup>
-        <ProjectReference Include="..\..\private\Nitrocid.LocaleChecker\Nitrocid.LocaleChecker.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-        <ProjectReference Include="..\Nitrocid\Nitrocid.csproj" Private="false" />
+        <ProjectReference Include="..\..\..\private\Nitrocid.LocaleChecker\Nitrocid.LocaleChecker.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+        <ProjectReference Include="..\..\Nitrocid\Nitrocid.csproj" Private="false" />
     </ItemGroup>
     <!-- ThemePacks addon Platform Information End -->
 
