chg - Fixed build and property propagation
---

Type: chg
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons/Directory.Build.props
+++ b/public/Nitrocid.Addons/Directory.Build.props
@@ -1,4 +1,6 @@
 <Project>
+    <Import Project="..\..\Directory.Build.props" />
+
     <!-- ThemePacks addon General Information -->
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
