Updated documentation to reflect latest changes 40357246f77406c4aeae96826a8db4cc45dbbdf3

--- a/manifest.json
+++ b/manifest.json
@@ -3263,6 +3263,34 @@
     },
     {
       "type": "ManagedReference",
+      "source_relative_path": "api/Nitrocid.Localized.LocalStrings.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/Nitrocid.Localized.LocalStrings.html"
+        }
+      },
+      "version": "",
+      "Uid": null,
+      "IsMRef": true,
+      "Title": "Nitrocid.Localized.LocalStrings",
+      "Summary": "<p sourcefile=\"api/Nitrocid.Localized.LocalStrings.yml\" sourcestartlinenumber=\"1\">Localized string tools</p>\n"
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/Nitrocid.Localized.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/Nitrocid.Localized.html"
+        }
+      },
+      "version": "",
+      "Uid": null,
+      "IsMRef": true,
+      "Title": "Nitrocid.Localized",
+      "Summary": null
+    },
+    {
+      "type": "ManagedReference",
       "source_relative_path": "api/Nitrocid.Misc.Audio.AudioCueContainer.yml",
       "output": {
         ".html": {
@@ -6513,11 +6541,11 @@
       "type": "Toc",
       "source_relative_path": "api/toc.yml",
       "output": {
-        ".html": {
-          "relative_path": "api/toc.html"
-        },
         ".json": {
           "relative_path": "api/toc.json"
+        },
+        ".html": {
+          "relative_path": "api/toc.html"
         }
       },
       "version": ""
@@ -6536,11 +6564,11 @@
       "type": "Toc",
       "source_relative_path": "toc.yml",
       "output": {
-        ".html": {
-          "relative_path": "toc.html"
-        },
         ".json": {
           "relative_path": "toc.json"
+        },
+        ".html": {
+          "relative_path": "toc.html"
         }
       },
       "version": ""
