--- a/private/Nitrocid.Generators/Nitrocid.Generators.KnownAddons/Resources/KnownAddons.json
+++ b/private/Nitrocid.Generators/Nitrocid.Generators.KnownAddons/Resources/KnownAddons.json
@@ -20,6 +20,11 @@
         "project": "ThemePacks"
     },
     {
+        "name": "AddonShellPacks",
+        "display": "Extra Shells Pack",
+        "project": "ShellPacks"
+    },
+    {
         "name": "ExtrasAmusements",
         "display": "Extras - Amusements",
         "project": "Extras.Amusements"
@@ -238,5 +243,10 @@
         "name": "ExtrasImagesIcons",
         "display": "Extras - Icons",
         "project": "Extras.Images.Icons"
+    },
+    {
+        "name": "ExtrasHashes",
+        "display": "Extras - Hashes",
+        "project": "Extras.Hashes"
     }
 ]
