int - Restored the "apt update" step
---

Lintian fails to download with 404 Not Found. In this case, we are
screwed. This will add a few seconds but it should be harmless.

---

Type: int
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/.github/workflows/build-ppa.yml
+++ b/.github/workflows/build-ppa.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Install required packages
         run: |
           sudo rm /etc/apt/sources.list.d/microsoft-prod.list
+          sudo NEEDRESTART_SUSPEND=1 apt update
           sudo NEEDRESTART_SUSPEND=1 apt install devscripts debhelper-compat dput build-essential equivs
           sudo NEEDRESTART_SUSPEND=1 mk-build-deps -i
           
