upd - Start depending on Base and Core
---

The API migration is almost ready once we finalize the breaking changes
that will be on Terminaux 7.0.

---

Type: upd
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid/Nitrocid.csproj
+++ b/public/Nitrocid/Nitrocid.csproj
@@ -123,6 +123,8 @@
   <ItemGroup>
     <ProjectReference Include="..\..\private\Nitrocid.Generators\Nitrocid.Generators.KnownAddons\Nitrocid.Generators.KnownAddons.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     <ProjectReference Include="..\..\private\Nitrocid.LocaleChecker\Nitrocid.LocaleChecker.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+    <ProjectReference Include="..\Nitrocid.Base\Nitrocid.Base.csproj" />
+    <ProjectReference Include="..\Nitrocid.Core\Nitrocid.Core.csproj" />
   </ItemGroup>
   <!-- KS Generators End -->
 
