--- a/public/Nitrocid.Base/Nitrocid.Base.csproj
+++ b/public/Nitrocid.Base/Nitrocid.Base.csproj
@@ -39,5 +39,8 @@
     <None Include="..\Nitrocid\OfficialAppIcon-NitrocidKS-512.png" Pack="true" PackagePath="\" />
     <None Include="..\..\README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Nitrocid.Core\Nitrocid.Core.csproj" />
+  </ItemGroup>
   <!-- KS Package Files End -->
 </Project>
