ref - Merged hash addons to N.E.Hashes
---

This is done to reduce the build time.

---

Type: ref
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons/Nitrocid.Extras.Hashes/Nitrocid.Extras.Hashes.csproj
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Hashes/Nitrocid.Extras.Hashes.csproj
@@ -4,10 +4,11 @@
   <PropertyGroup>
     <Description>Nitrocid KS Extras - Hashes</Description>
     <AssemblyTitle>Nitrocid KS Extras - Hashes</AssemblyTitle>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Resources\*" />
+    <PackageReference Include="Crc32.NET" Version="1.2.0" />
   </ItemGroup>
 
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
