--- a/public/Nitrocid/Nitrocid.csproj
+++ b/public/Nitrocid/Nitrocid.csproj
@@ -123,10 +123,15 @@
   <ItemGroup>
     <ProjectReference Include="..\..\private\Nitrocid.Generators\Nitrocid.Generators.KnownAddons\Nitrocid.Generators.KnownAddons.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     <ProjectReference Include="..\..\private\Nitrocid.LocaleChecker\Nitrocid.LocaleChecker.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-    <ProjectReference Include="..\Nitrocid.Base\Nitrocid.Base.csproj" />
-    <ProjectReference Include="..\Nitrocid.Core\Nitrocid.Core.csproj" />
   </ItemGroup>
   <!-- KS Generators End -->
+
+  <!-- KS Base/Core projects -->
+  <ItemGroup>
+    <ProjectReference Include="..\Nitrocid.Base\Nitrocid.Base.csproj" PrivateAssets="all" />
+    <ProjectReference Include="..\Nitrocid.Core\Nitrocid.Core.csproj" PrivateAssets="all" />
+  </ItemGroup>
+  <!-- KS Base/Core projects End -->
 
   <!-- KS Generated -->
   <ItemGroup>
