add - Added scaffolding for N.E.ChatbotAI
---

We're now trying to restore the chatbot addon that was removed twice
following the restrictions.

This time, we hope to be successful here.

After that, no new features will be added until we finish the Localizer
merge.

---

Type: add
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/private/Nitrocid.Generators/Nitrocid.Generators.KnownAddons/Resources/KnownAddons.json
+++ b/private/Nitrocid.Generators/Nitrocid.Generators.KnownAddons/Resources/KnownAddons.json
@@ -208,5 +208,10 @@
         "name": "ExtrasHashes",
         "display": "Extras - Hashes",
         "project": "Extras.Hashes"
+    },
+    {
+        "name": "ExtrasChatbotAI",
+        "display": "Extras - Chatbot AI",
+        "project": "Extras.ChatbotAI"
     }
 ]
