Updated documentation to reflect latest changes 8de3cc9c965ff8149029c84a366c2b3d6247dd82

--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -23769,6 +23769,12 @@ references:
   commentId: F:Nitrocid.Kernel.Extensions.KnownAddons.ExtrasCalendar
   fullName: Nitrocid.Kernel.Extensions.KnownAddons.ExtrasCalendar
   nameWithType: KnownAddons.ExtrasCalendar
+- uid: Nitrocid.Kernel.Extensions.KnownAddons.ExtrasChatbotAI
+  name: ExtrasChatbotAI
+  href: api/Nitrocid.Kernel.Extensions.KnownAddons.html#Nitrocid_Kernel_Extensions_KnownAddons_ExtrasChatbotAI
+  commentId: F:Nitrocid.Kernel.Extensions.KnownAddons.ExtrasChatbotAI
+  fullName: Nitrocid.Kernel.Extensions.KnownAddons.ExtrasChatbotAI
+  nameWithType: KnownAddons.ExtrasChatbotAI
 - uid: Nitrocid.Kernel.Extensions.KnownAddons.ExtrasChemistry
   name: ExtrasChemistry
   href: api/Nitrocid.Kernel.Extensions.KnownAddons.html#Nitrocid_Kernel_Extensions_KnownAddons_ExtrasChemistry
