add - Added reporting function (internal)
---

This is an internal function that makes a report of both unlocalized and
localized strings for each project.

---

Type: add
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Locales/Properties/launchSettings.json
+++ b/public/Nitrocid.Locales/Properties/launchSettings.json
@@ -51,6 +51,14 @@
         "Nitrocid.Locales - Help": {
             "commandName": "Project",
             "commandLineArgs": "help"
+        },
+        "Nitrocid.Locales - Report": {
+            "commandName": "Project",
+            "commandLineArgs": "report"
+        },
+        "Nitrocid.Locales - Report - Dry": {
+            "commandName": "Project",
+            "commandLineArgs": "report -dry"
         }
     }
 }
